# LabPA

./: git_log.txt  git_merge.bat
lab3/: .gitignore  CMakeLists.txt  documentacion_casos_uso.docx  guia_defensa_lab3.docx  guia_defensa_lab3_v2.docx  lab3  main.cpp
lab3/dominio/: Categoria.cpp  Categoria.h  ClienteOcasional.h  ClienteRegistrado.cpp  ClienteRegistrado.h  Direccion.cpp  Direccion.h  LineaDetalle.cpp  LineaDetalle.h  LineaOrdenCompra.cpp  OrdenCompra.h  Producto.h  Proveedor.h  ProveedorProducto.cpp  Venta.cpp
lab3/include/: Calificacion.h  Categoria.h  Cliente.h  ClienteRegistrado.h  DtDireccion.h  DtFecha.h  Estado.h  LineaCompra.h  OrdenCompra.h  Producto.h  Proveedor.h  ProveedorProducto.h  Venta.h  labDottiMacedoSantos.h
lab3/logica/controladores/: AdminController.cpp  AdminController.h  EmpleadoController.cpp  EmpleadoController.h  Rol.h  VentaController.cpp  VentaController.h  tipoRetorno.h
lab3/logica/dominio/: Calificacion.cpp  Calificacion.h  Categoria.cpp  Cliente.cpp  Cliente.h  ClienteOcasional.cpp  ClienteOcasional.h  ClienteRegistrado.cpp  ClienteRegistrado.h  Direccion.cpp  Direccion.h  Fecha.cpp  Fecha.h  LineaDetalle.h  (+14 more)
lab3/src/: Calificacion.cpp  Categoria.cpp  ClienteRegistrado.cpp  DtDireccion.cpp  DtFecha.cpp  LineaCompra.cpp  LineaDetalle.cpp  OrdenCompra.cpp  Producto.cpp  Proveedor.cpp  ProveedorProducto.cpp  Venta.cpp  labDottiMacedoSantos.cpp  main.cpp
lab3/vista/: InputUtils.h  MenuAdministrador.cpp  MenuAdministrador.h  MenuCliente.cpp  MenuCliente.h  MenuEmpleado.cpp  MenuEmpleado.h  MenuPrincipal.cpp  MenuPrincipal.h
